push footer to the bottom, fix-top navbar, extra padding

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,21 @@
+html {
+    height: 100%;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+}
+
+.wrapper {
+    flex: 1 0 auto;
+}
+
+.footer {
+    flex-shrink: 0;
+}
+
 input[name="inputField"] {
     width: 70%;
 }
